--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html ng-app="ateam">
-
 <head>
     <title>A Team Project</title>
     <!-- styles -->
-    <link rel="stylesheet" href="js/bower_components/bootstrap/dist/css/bootstrap.min.css" media="screen" title="bootstrap" charset="utf-8">
-    <link rel="stylesheet" "js/bower_components/angular-ui/build/angular-ui.min.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="/css/app.css" media="screen" title="stylesheet" charset="utf-8">
+    <link rel="stylesheet" href="js/bower_components/bootstrap/dist/css/bootstrap.min.css" media="all" title="bootstrap" charset="utf-8">
+    <link rel="stylesheet" "js/bower_components/angular-ui/build/angular-ui.min.css" media="all" title="no title" charset="utf-8">
+    <link rel="stylesheet" src="js/bower_components/ammap3/ammap/ammap.css" media="all" title="stylesheet" charset="utf-8">
     <!-- SCRIPTS -->
     <!-- vendor -->
     <script src="js/bower_components/jquery/dist/jquery.min.js"></script>
@@ -14,7 +13,11 @@
     <script src="js/bower_components/angular/angular.min.js"></script>
     <script src="js/bower_components/angular-ui/build/angular-ui.min.js"></script>
     <script src="js/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-
+    <!-- amCharts javascript sources -->
+		<script type="text/javascript" src="https://www.amcharts.com/lib/3/ammap.js"></script>
+		<script type="text/javascript" src="https://www.amcharts.com/lib/3/maps/js/italyLow.js"></script>
+    <!-- <script type="text/javascript" src="js/bower_components/ammap3/ammap/ammap.js"></script>
+    <script type="text/javascript" src="js/bower_components/ammap3/ammap/ammap_amcharts_extension.js"></script> -->
     <!-- app -->
     <script src="js/app.js"></script>
     <script src="js/controllers/landingCtrl.js"></script>
